--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,21 @@ html, body, button, select {
     background-color: var(--background_color);
 }
 
+body {
+    height: calc(97.5vh);
+    margin: 0;
+    padding: 0;
+    position: relative;
+  }
+  body::before {
+    content: '';
+    position: absolute;
+    top: -25px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    border: 8px solid var(--regular_text);
+  }
 table {
     width: 100%;
 }
@@ -39,13 +54,14 @@ td {
     width: 100px;
 }
 
+/* #sonnet_text {} */
+
 #sonnet_btn {
+    margin: 15px;
     border: 2px solid black;
     background-color: var(--background_color);
     cursor: pointer;
 }
-
-/* #sonnet_text {} */
 
 #sonnet_btn:hover {
     background-color: var(--regular_text);
