--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@
     --option_gradient_color_2: #cac39c4b;    
     --highlight_background: #111111;    
     --highlight_text: rgb(255, 255, 245);
+    --robot_eyes: #a87745;
+    --robot_purple: #b097cd;
 }
 
 
@@ -19,16 +21,24 @@ html, body, button, select {
     /* background-color: var(--background_color); */
 }
 
+h2:hover {
+  color: var(--robot_eyes);
+}
+
 .optionStuff {
-    border: 2px solid black;
+    color: var(--regular_text);
+    border: 1px solid black;
     background-color: var(--background_color);
     background: linear-gradient(to bottom right, var(--option_gradient_color_1), var(--option_gradient_color_2)), url(../img/noise.svg);
+    box-shadow:
+    2px 2px var(--shadow_color);    
 }
 
 .optionStuff:hover {
+    background: linear-gradient(to bottom right, var(--robot_purple), var(--option_gradient_color_2)), url(../img/noise.svg);
     box-shadow:
-    -10px 0 150px var(--regular_text),
-    3px 2px var(--shadow_color);
+    -10px 0 150px var(--robot_purple),
+    3px 3px var(--shadow_color);
 }
 
 body {
@@ -63,15 +73,12 @@ td {
 
 #sonnet_btn {
     margin: 15px;
-    /* border: 2px solid black; */
-    /* background-color: var(--background_color); */
     cursor: pointer;
 }
 
 #sonnet_btn:hover {
-    background-color: var(--regular_text);
-    color: var(--background_color);
-    background: linear-gradient(to top right, var(--regular_text), var(--option_gradient_color_2)), url(../img/noise.svg);    
+    /* background-color: var(--regular_text); */
+    /* color: var(--background_color); */
 }
 
 select:required:invalid {
