--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,10 @@
 }
 
 
-html, body, button, select {
+html, body, button, select, textarea {
     font-family: 'Goudy Bookletter 1911', serif;
     text-align: center;
+    cursor: url("../img/cursor.png"), auto;    
     /* background-color: var(--background_color); */
 }
 
@@ -26,6 +27,7 @@ h2:hover {
 }
 
 .optionStuff {
+    font-family: 'Goudy Bookletter 1911', serif;  
     color: var(--regular_text);
     border: 1px solid black;
     background-color: var(--background_color);
@@ -73,7 +75,7 @@ td {
 
 #sonnet_btn {
     margin: 15px;
-    cursor: pointer;
+    cursor: url("../img/hand-cursor.png"), auto;
 }
 
 #sonnet_btn:hover {
